--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,48 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "PA1_template"
+author: "BB"
+date: "5/12/2019"
+output: html_document
 ---
+###Requirement 1: Code for reading in the dataset and/or processing the data
+####include dplyr and ggplot2 packages
+```{r}
+require(dplyr)
+require(ggplot2)
+```
 
-
-## Loading and preprocessing the data
-
-
-
-## What is mean total number of steps taken per day?
-
-
-
-## What is the average daily activity pattern?
-
-
-
-## Imputing missing values
-
-
-
-## Are there differences in activity patterns between weekdays and weekends?
+###Read in the dataset 
+```{r}
+setwd("~/Desktop/Coursera Files/Course5_ReproRsrch")
+activityData<-read.csv("./data/activity.csv", stringsAsFactors = FALSE)
+activityData$date <- as.Date(activityData$date)
+str(activityData)
+```
+###Requirement 2: Histogram of the total number of steps taken each day
+#Create a histogram of total steps per day
+```{r}
+sByd <- activityData %>% group_by(date) %>% summarise(steps2 = sum(steps, na.rm = TRUE))
+hist(sByd$steps2,col = 'grey',xlab = "Steps",ylab = "Frequency",main = "Total Steps per Day")
+```
+###Mean and median number of steps taken each day
+```{r}
+print(meanSteps <- mean(sByd$steps2))
+print(medianSteps <- median(sByd$steps2))
+```
+###Time series plot of the average number of steps taken
+asByI <- activityData %>% group_by(interval) %>% summarise(avgSteps = mean(steps, na.rm = TRUE))
+#uInterval <- unique(asByI$interval)
+#dailyPattern <- data.frame(cbind(asByI$avgSteps,uInterval))
+#plot(uInterval,asByI$avgSteps,type = "l",xlab = "Intervals",
+#     ylab = "Average Steps",main = "Average Steps per Interval")
+plot(asByI$interval,asByI$avgSteps,type = "o",xlab = "Intervals",
+     ylab = "Average Steps",main = "Average Steps per Interval")
+```
+###The 5-minute interval that, on average, contains the maximum number of steps
+```{r}
+#print(asByI$avgSteps[which.max(asByI$avgSteps)]) #this output is correct, need interval though
+intAndSteps <- asByI[which.max(asByI$avgSteps),] #this is correct at 835
+print(intAndSteps)
+#print(max<-dailyPattern[index,1])
+print(medianSteps <- median(sByd$steps2))
+```
