--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -19,7 +19,7 @@ activityData$date <- as.Date(activityData$date)
 str(activityData)
 ```
 ###Requirement 2: Histogram of the total number of steps taken each day
-#Create a histogram of total steps per day
+###What is mean total number of steps taken per day?
 ```{r}
 sByd <- activityData %>% group_by(date) %>% summarise(steps2 = sum(steps, na.rm = TRUE))
 hist(sByd$steps2,col = 'grey',xlab = "Steps",ylab = "Frequency",main = "Total Steps per Day")
@@ -29,20 +29,18 @@ hist(sByd$steps2,col = 'grey',xlab = "Steps",ylab = "Frequency",main = "Total St
 print(meanSteps <- mean(sByd$steps2))
 print(medianSteps <- median(sByd$steps2))
 ```
+
 ###Time series plot of the average number of steps taken
+###What is the average daily activity pattern?
+```{r}
 asByI <- activityData %>% group_by(interval) %>% summarise(avgSteps = mean(steps, na.rm = TRUE))
-#uInterval <- unique(asByI$interval)
-#dailyPattern <- data.frame(cbind(asByI$avgSteps,uInterval))
-#plot(uInterval,asByI$avgSteps,type = "l",xlab = "Intervals",
-#     ylab = "Average Steps",main = "Average Steps per Interval")
 plot(asByI$interval,asByI$avgSteps,type = "o",xlab = "Intervals",
      ylab = "Average Steps",main = "Average Steps per Interval")
 ```
-###The 5-minute interval that, on average, contains the maximum number of steps
+
+###Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 ```{r}
-#print(asByI$avgSteps[which.max(asByI$avgSteps)]) #this output is correct, need interval though
 intAndSteps <- asByI[which.max(asByI$avgSteps),] #this is correct at 835
 print(intAndSteps)
-#print(max<-dailyPattern[index,1])
 print(medianSteps <- median(sByd$steps2))
 ```
